# django-storages-s3

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
storages/: __init__.py  s3.py
tests/: test_s3.py
