[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=70.0",
]

[project]
name = "django-storages-s3"
description = "S3 storage backend for Django"
license = "BSD-3-Clause"
authors = [{name = "Christopher Banck"}]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
readme = "README.md"
version = "0.1.0"
dependencies = [
  "Django>=5.2",
  "boto3>=1.42",
]

[project.urls]
Homepage = "https://github.com/vchrisb/django-s3"

[tool.setuptools.packages.find]
include = ["storages*"]

[tool.ruff]
lint.select = [
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "DJ",     # flake8-django
  "E",      # pycodestyle
  "F",      # Pyflakes
  "I",      # isort
  "ISC",    # flake8-implicit-str-concat
  "PERF",   # Perflint
  "PL",     # Pylint
  "RUF",    # Ruff-specific rules
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "W",      # pycodestyle
]
lint.ignore = []
target-version = "py312"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["storages"]

[tool.ruff.lint.per-file-ignores]
"tests/test_s3.py" = ["B018"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str"]
